--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6e6660d
+	base = d01ed1b
 	trimbase = 
 	parent = release/indigo/actionlib
-	previous = 
+	previous = 6e6660d
