--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0e2e076
+	base = 7c75d1a
 	trimbase = 
 	parent = rpm/indigo/actionlib
-	previous = 
+	previous = 0e2e076
